XptoPortalApi/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: AppName
  namespace: NAMESPACE
spec:
  selector:
    matchLabels:
      run: AppName
  replicas: 1
  template:
    metadata:
      labels:
        run: AppName
    spec:
      containers:
      - name: AppName
        image: MY_REGISTRY/IMAGE_ID:VERSION
        ports:
        - containerPort: APPPORT
