XptoPortalApi/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: AppName
  namespace: NAMESPACE
  labels:
    run: AppName
spec:
  ports:
  - port: APPPORT
    protocol: TCP
  selector:
    run: AppName
